--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,31 +10,58 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/message_bar" >
+        android:background="@drawable/message_bar"
+        android:orientation="vertical" >
 
         <EditText
             android:id="@+id/text"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="5sp"
             android:layout_weight="1"
             android:background="@drawable/message_field"
-            android:hint="Write here"
+            android:hint="@string/hint"
+            android:inputType=""
             android:padding="5sp"
             android:textColor="@color/textFieldColor" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_margin="5sp"
-            android:background="@drawable/send_button"
-            android:onClick="sendMessage"
-            android:paddingBottom="5sp"
-            android:paddingLeft="15sp"
-            android:paddingRight="15sp"
-            android:paddingTop="5sp"
-            android:text="Send"
-            android:textColor="#FFF" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2" >
+
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_margin="5sp"
+                android:layout_weight="1"
+                android:background="@drawable/send_button"
+                android:contentDescription="@string/speak"
+                android:onClick="voiceText"
+                android:paddingBottom="5sp"
+                android:paddingLeft="15sp"
+                android:paddingRight="15sp"
+                android:paddingTop="5sp"
+                android:src="@android:drawable/ic_btn_speak_now"
+                android:textColor="#FFF" />
+
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_margin="5sp"
+                android:layout_weight="1"
+                android:background="@drawable/send_button"
+                android:contentDescription="@string/speak"
+                android:onClick="sendMessage"
+                android:paddingBottom="5sp"
+                android:paddingLeft="15sp"
+                android:paddingRight="15sp"
+                android:paddingTop="5sp"
+                android:src="@android:drawable/ic_media_play"
+                android:text="@string/send"
+                android:textColor="#FFF" />
+        </LinearLayout>
     </LinearLayout>
 
     <ListView
