--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,9 +6,9 @@
 	<color name="textShadow">#FFF</color>
 	<color name="listViewBg">#DADFEE</color>
 
-	<color name="sendLightColor">#8897BF</color>
-	<color name="sendMeduimColor">#5D6CA5</color>
-	<color name="sendDarkColor">#515F9F</color>
+	<color name="sendLightColor">#CCFFFF</color>
+	<color name="sendMeduimColor">#99FFFF</color>
+	<color name="sendDarkColor">#66FFFF</color>
 
 	<color name="barDarkColor">#CECECE</color>
 	<color name="barMeduimColor">#DFDEE0</color>
