--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -2,37 +2,45 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:weightSum="6" >
 
     <ImageView
         android:id="@+id/imgStt"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30sp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10sp"
+        android:layout_weight="3.5"
         android:contentDescription="@string/main_empty_list"
-        android:layout_gravity="center"
         android:src="@drawable/online_robot" />
-    
-    <TextView
-        android:id="@+id/tvStt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/online_text"
-        android:layout_marginTop="30sp"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textSize="20sp"
-        />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dip"
+        android:layout_height="0dp"
+        android:layout_margin="5dp"
+        android:layout_weight="1" >
+
+        <TextView
+            android:id="@+id/tvStt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15sp"
+            android:gravity="center"
+            android:text="@string/online_text"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginBottom="10sp"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:gravity="center|bottom"
         android:orientation="vertical" >
-        
+
         <Button
             android:id="@+id/btnQuit"
             android:layout_width="match_parent"
@@ -47,9 +55,8 @@
             android:paddingRight="15sp"
             android:paddingTop="5sp"
             android:text="@string/reload"
-            android:visibility="gone"
             android:textSize="25sp" />
-		
+
         <Button
             android:id="@+id/btnStart"
             android:layout_width="match_parent"
@@ -60,7 +67,6 @@
             android:contentDescription="@string/speak"
             android:onClick="startChat"
             android:paddingBottom="5sp"
-         
             android:paddingLeft="15sp"
             android:paddingRight="15sp"
             android:paddingTop="5sp"
