--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -7,11 +7,12 @@
 
     <ImageView
         android:id="@+id/imgStt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginTop="10sp"
-        android:layout_weight="3.5"
+        android:padding="15dp"
+        android:layout_marginTop="5sp"
+        android:layout_weight="3"
         android:contentDescription="@string/main_empty_list"
         android:src="@drawable/online_robot" />
 
@@ -19,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="5dp"
-        android:layout_weight="1" >
+        android:layout_weight="1.5" >
 
         <TextView
             android:id="@+id/tvStt"
